force-app/main/default/objects/GPOS_Variety_Consolidation__c/GPOS_Variety_Consolidation__c.object-meta.xml
<CustomObject>
    <label>GPOS Variety Consolidation</label>
    <nameField>
        <label>GPOS Variety Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPOS Varieties Consolidations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>