force-app/main/default/objects/GPOS_Variety_Consolidation__c/fields/GPOS_Grower_Temp__c.field-meta.xml
<CustomField>
    <fullName>GPOS_Grower_Temp__c</fullName>
    <label>GPOS Grower Temp</label>
    <referenceTo>GPOS_Grower_Temp__c</referenceTo>
    <relationshipName>GPOS_Variety_Temps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>