force-app/main/default/objects/GPOS_Variety_Consolidation__c/fields/IV_Partial_Amount__c.field-meta.xml
<CustomField>
    <fullName>IV_Partial_Amount__c</fullName>
    <label>IV Partial Amount</label>
    <summarizedField>GPOS_Variety_Temp__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>GPOS_Variety_Temp__c.Invoice_Type__c</field>
        <operation>equals</operation>
        <value>IV</value>
    </summaryFilterItems>
    <summaryForeignKey>GPOS_Variety_Temp__c.GPOS_Variety_Consolidation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>