force-app/main/default/objects/GPOS_Variety_Consolidation__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipName>GPOS_Variety_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>